# explainability_sandbox

./: .gitignore  README.md  pyproject.toml  pyprojet.toml
notebooks/: develop.ipynb  fine-tuning.ipynb  imagenet_preprocess.ipynb  surrogate_after_training.ipynb  surrogate_parallel_training.ipynb
src/: cli.py  definitions.py  neurons_importance.py
src/dataset_handler/: classic_dataset.py
src/examples/: utils_heart.py
src/models/: deep_linear.py  lightning_wrapper.py  model_surrogate_parallel.py  multi_linear_layers.py  resnet.py  resnet50.py  simple_logistic_surrogate.py
