[tool.poetry]
name = "explainability_interpretability_robustness"
version = "0.1.0"
description = "Sandbox for explainability/interpretability/robustness technics/methods"
license = "Proprietary"
authors = ["Loïc Baret <baret.loic.1@gmail.com>"]
readme = "README.md"
keywords = [
    "explainability", "interpretability", "robustness", "machine learning", "deep learning"
]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.scripts]
finetune_resnet = 'src.cli:pretrain_resnet'

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torchvision = "^0.15.0"
captum = "^0.6.0"
rich = "^12.5.1"
click = "^8.1.3"
pytorch-lightning = "^2.0.2"
notebook = "^6.4.12"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
ipykernel = "*"