[tool.poetry]
name = "explainability_interpretability_robustness"
version = "0.1.0"
description = "Sandbox for explainability/interpretability/robustness technics/methods"
license = "Proprietary"
authors = ["Loïc Baret <baret.loic.1@gmail.com>"]
readme = "README.md"
keywords = [
    "explainability", "interpretability", "robustness", "machine learning", "deep learning"
]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.scripts]
main = 'src.cli:cli'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl" }
captum = "^0.6.0"
rich = "^12.5.1"
click = "^8.1.3"
pytorch-lightning = "^2.0.2"
notebook = "^6.4.12"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
torchmetrics = "^0.11.4"
seaborn = "^0.12.2"
tensorboard = "^2.13.0"
torch-tb-profiler = "^0.4.1"

[tool.poetry.dev-dependencies]
ipykernel = "*"